@@ -1,0 +1,11 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST phototonic-1.5.54_p20150208.tar.gz 224836 SHA256 63c29b2d6b5da4a682d91c7e4c9f4207ae80337669223f7b2b22a378cfbd35f3 SHA512 a9c3b14a7e6a8788b8f36b38b6d3250be9247d65f2e3f771178fed81b559785cddeee7edd5c41e1839163116d79e40975f911c61ba1a45b2fdc575e0c4270442 WHIRLPOOL dd11493bc7a56441d9262adcc29b4dba94bb5b4e442105ba7761d267e82f84817a8895b176d0227d90bb4bdaa9a6815297f5dd45836c4dfa4a84b1edeb9e08ec
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlT+wKAACgkQknrdDGLu8JAt3wD+KPoj9XQhHIADw7RKo5n0HFGu
+cJXX3e21i4SgWouKnB4A/1W1ehHJEqXWb3NkyhkJhfdy3fO8lmlDm5rzFS1GxXTb
+=2MqF
+-----END PGP SIGNATURE-----
