@@ -4,15 +4,15 @@
 
 EAPI=5
 
-inherit qmake-utils git-2
+inherit qmake-utils vcs-snapshot
 
 DESCRIPTION="Image Viewer and Organizer"
 HOMEPAGE="https://gitorious.org/phototonic"
-EGIT_REPO_URI="git://gitorious.org/phototonic/phototonic.git"
+SRC_URI="https://gitorious.org/phototonic/phototonic/archive/06e2f123ac1f8f368dcb4db641c05d92f69f966b.tar.gz -> ${P}.tar.gz"
 
 LICENSE="GPL-1"
 SLOT="0"
-KEYWORDS=""
+KEYWORDS="~amd64"
 IUSE=""
 
 RDEPEND="dev-qt/qtwidgets:5
